--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button type="submit" id="button-to-import">Import</button>
       </form>
     </section>
+    <pre><code id="result"></code></pre>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.0.0/papaparse.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.26.1/ramda.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
